@@ -1,3 +1,13 @@
+2012-03-16 Borut Razem <borut.razem AT gmail.com>
+
+	* sdcc.sln, src\sdcc.vcxproj, src\sdcc.vcxproj.filters,
+	  src\yacc.vcxproj:
+	  project src renamed to sdcc, removed project yacc
+	* doc\sdccman.lyx, src\SDCCasm.c, src\SDCCicode.h,
+	  src\SDCCast.c, src\SDCCast.h, src\pic16\main.c:
+	  implemeted pragma config for pic16 target, solution
+	  of bug #3486890 - pic16 port config directive warning
+
 2012-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* sdas/linksrc/lkarea.c (allocate_space,find_empty_space): fixed bound
